<resources>
    <string name="app_name">VideoEditingApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_music_to_video">Add Music to Video</string>
    <string name="my_creation">My Creation</string>
    <string name="merge_video">Merge Video</string>
    <string name="merge_audio">Merge Audio</string>
    <string name="extract_audio">Extract Audio</string>
    <string name="cut_audio">Cut Audio</string>
    <string name="cut_video">Cut Video</string>
    <string name="fast_speed">Fast Speed</string>
    <string name="slow_motion">Slow Motion</string>
    <string name="select_files">Select Files</string>
    <string name="all">All</string>
    <string name="date">Date</string>
    <string name="sorted_by">Sorted by:</string>
    <string name="total_files">Total Files</string>
    <string name="next">Next</string>
    <string name="sort_by">Sort By</string>
    <string name="tap_to_view_selected_files">Tap to view Selected Files</string>
    <string name="selected_audio_files">Selected Audio Files</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="duration">Duration</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="from_new_to_old">From new to old</string>
    <string name="from_old_to_new">From old to new</string>
    <string name="from_a_to_z">From A to Z</string>
    <string name="from_z_to_a">From Z to A</string>
    <string name="from_long_to_short">From long to short</string>
    <string name="from_short_to_long">From short to long</string>
    <string name="save">Save</string>
    <string name="change_music">Change Music</string>
    <string name="output_file">Output File</string>
    <string name="file_name">File Name</string>
    <string name="info">Info</string>
    <string name="path">Path</string>
    <string name="add_music">Add Music</string>
    <string name="file_not_found">File not found</string>
    <string name="rename_file">Rename File</string>
    <string name="rename">rename</string>
    <string name="volume">Volume</string>
    <string name="speed">Speed</string>
    <string name="volume_100">Volume: 100%</string>
    <string name="short_seconds">sec</string>
    <string name="audio_cutter">Audio Cutter</string>
    <string name="video_saved">Video saved</string>
    <string name="audio_saved">Audio saved</string>
    <string name="file_saved">File saved</string>
    <string name="get_audio">Get Audio</string>
    <string name="are_you_sure_you_want_to_exit_the_conversion_will_be_stopped">Are you sure you want to exit? The conversion will be stopped.</string>
    <string name="exit_conversion">Exit Conversion?</string>
    <string name="exit">Exit</string>
    <string name="converting">Converting...</string>
    <string name="fast_video">Fast Video</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="slow_video">Slow Video</string>
    <string name="video_output">Video Output</string>
    <string name="audio_output">Audio Output</string>
    <string name="Video_Editor">Video Editor</string>
    <string name="share">Share</string>
    <string name="file_info">File Info</string>
    <string name="delete">Delete</string>
    <string name="delete_file_from_device">Delete file from device?</string>
    <string name="file_will_be_deleted_permanently">File will be deleted permanently.</string>
    <string name="merge_style">Merge Style</string>
    <string name="ratio">Ratio</string>
    <string name="resolution">Resolution</string>
    <string name="orignal">Orignal</string>
    <string name="select_video_quality">Select Video Quality</string>
    <string name="small_file">Small File</string>
    <string name="medium_file">Medium File</string>
    <string name="large_file">Large File</string>
    <string name="remove">Remove</string>
    <string name="_2_files_to_be_merged">2 files to be merged</string>
    <string name="merge">Merge</string>
    <string name="to_be_merged">%1$s %2$s to be merged</string>
    <string name="this_action_may_contains_the_ads">This action may contains the ads.</string>
    <string name="transforming_your_desires_into_reality">Transforming your desires into reality.</string>
    <string name="choose_the_features_that_suit_your_requirements">Choose the features that suit your requirements.</string>
    <string name="photo_slideshow">Photo Slideshow</string>
    <string name="reverse_video">Reverse video</string>
    <string name="video_to_gif">Video to GIF</string>
    <string name="split_audio">Split Audio</string>
    <string name="convert_audio">Convert Audio</string>
    <string name="audio_mixer">Audio Mixer</string>
    <string name="add_music_to_video_with_multiple_background_tracks">Add music to video with multiple background tracks!</string>
    <string name="change_video_speed">Change Video Speed</string>
    <string name="you_can_change_the_speed_for_video_fast_or_slow_motion_control">You can change the speed for video fast or slow-motion control!</string>
    <string name="cut_video_merge_video_split_video_in_timeline_or_multi_split_videos_into_several_clips">Cut video Merge video Split video in timeline or multi-Split videos into several clips!</string>
    <string name="video_cutter_and_editor">Video Cutter and Editor</string>
</resources>