<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"/>

    <RadioGroup
        android:id="@+id/sortOrderGroupTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <RadioButton
            android:id="@+id/radioDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            style="@style/RedRadioButtonStyle" />

        <RadioButton
            android:id="@+id/radioName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/RedRadioButtonStyle" />

        <RadioButton
            android:id="@+id/radioDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            style="@style/RedRadioButtonStyle" />
    </RadioGroup>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0"/>

    <RadioGroup
        android:id="@+id/sortOrderGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <RadioButton
            android:id="@+id/radioAsc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ascending"
            style="@style/RedRadioButtonStyle" />

        <RadioButton
            android:id="@+id/radioDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descending"
            style="@style/RedRadioButtonStyle" />
    </RadioGroup>
</LinearLayout>
