<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_exit_linear"
    android:layout_width="350dp"
    android:elevation="@dimen/_10sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialog"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/exit_conversion"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/are_you_sure_you_want_to_exit_the_conversion_will_be_stopped"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvExit" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/_10sdp"
            android:weightSum="2">

            <!-- No Text View -->
            <TextView
                android:id="@+id/textViewNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingVertical="6dp"
                android:paddingHorizontal="12dp"
                android:fontFamily="@font/poppins"
                android:text="@string/cancel"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/black" />

            <!-- Yes Text View -->
            <TextView
                android:id="@+id/textViewYes"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@drawable/rounded_bg_dialog"
                android:backgroundTint="@color/appcolor"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:textSize="@dimen/_13ssp"
                android:paddingHorizontal="12dp"
                android:text="@string/exit"
                android:textColor="@color/white" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>