<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbackground"
    tools:context=".fragments.ChangeMusicFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clToolbarFragment"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"

        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_back"
            android:visibility="visible"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/tvToolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvToolbar" />

        <TextView
            android:id="@+id/tvToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/change_music"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivBack"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ivSave"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_save_bg"
            android:fontFamily="@font/poppins"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/tvToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvToolbar"
            app:tint="@color/black" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.media3.ui.AspectRatioFrameLayout
        android:id="@+id/aspectRatioFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clToolbarFragment"
        app:layout_constraintWidth_percent="1">

        <androidx.media3.ui.PlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.media3.ui.AspectRatioFrameLayout>


    <TextView
        android:id="@id/tvChangeMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/change_music"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aspectRatioFrameLayout" />


    <TextView
        android:id="@+id/tvCutAudio"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:drawableTop="@drawable/ic_cut_audio"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/cut_audio"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvCutVideo"
        app:layout_constraintTop_toBottomOf="@+id/tvChangeMusic" />

    <TextView
        android:id="@+id/tvCutVideo"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:drawableTop="@drawable/ic_cut_video"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/cut_video"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/tvCutAudio"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChangeMusic" />


</androidx.constraintlayout.widget.ConstraintLayout>